# contribution-police

./: .mypy.ini  README.md  pyproject.toml
src/contribution_police/application/common/: __init__.py  event_callback.py
src/contribution_police/application/common/models/: __init__.py  add_movie_contribution.py  add_person_contribution.py  edit_movie_contribution.py  edit_person_contribution.py  role.py
