[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "contribution-police"
description = "Awesome Movie Database Contribution Police Service"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "alt-profanity-check==1.5.*",
    "lingua-language-detector==2.0.*",
    "nudenet==3.4.*",
]

[project.optional-dependencies]
dev = [
    "mypy==1.11.*",
    "ruff==0.6.*",
    "pre-commit==4.0.*",
]
event_consumer = [
    "faststream==0.5.*",
]
